MOC-66: Fix bug and UI for general module